切换到 leapjoy.cn/gaea

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "byteball",
+  "name": "GAEA",
   "description": "Smart payments made simple",
   "author": "Byteball",
   "version": "2.1.0",
@@ -29,14 +29,14 @@
     "plugin": false
   },
   "chromium-args": "--proxy-server=http://127.1.2.7 --password-store=basic --disable-password-generation",
-  "homepage": "https://github.com/byteball/byteball",
+  "homepage": "https://github.com/guijun/byteball",
   "license": "MIT",
   "repository": {
-    "url": "git://github.com/byteball/byteball.git",
+    "url": "git://github.com/guijun/byteball.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/byteball/byteball/issues"
+    "url": "https://github.com/guijun/byteball/issues"
   },
   "browser": {
     "request": "browser-request",
@@ -47,7 +47,7 @@
     "bip38": "^1.4.0",
     "bitcore-lib": "^0.13.14",
     "bitcore-mnemonic": "~1.0.0",
-    "byteballcore": "git+https://github.com/byteball/byteballcore.git",
+    "byteballcore": "git+https://github.com/guijun/byteballcore.git",
     "grunt": "^1.0.1",
     "grunt-angular-gettext": "^2.2.3",
     "grunt-browserify": "^5.0.0",
@@ -63,7 +63,7 @@
     "preconditions": "^1.0.8",
     "shelljs": "^0.3.0",
     "sjcl": "^1.0.2",
-    "unzip": "git+https://github.com/byteball/unzip.git",
+    "unzip": "git+https://github.com/guijun/unzip.git",
     "zip": "git+https://github.com/xJeneKx/zip.git"
   },
   "optionalDependencies": {
