--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "secp256k1": "secp256k1/js"
   },
   "dependencies": {
+    "sqlite3": "^3.1.4",
     "async": "^1.5.2",
     "bip38": "^1.4.0",
     "bitcore-lib": "^0.13.14",
